--- a/inicio.html
+++ b/inicio.html
@@ -8,6 +8,14 @@
     <title>EDUCACION FINANCIERA</title>
 </head>
 <body>
+    <div class="fixed-container">
+        <div class="fixed-text-box">
+            <p>Frases motivacionales</p>
+        </div>
+        <a href="https://ian2007xd.github.io/SoulSpark" class="fixed-button" target="_blank">
+            <i class="fa-solid fa-trophy"></i>
+        </a>
+    </div>
     <!--MENU-->
     <nav class="nav">
         <div class="nav-bar">
