--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+    <div class="fixed-container">
+        <div class="fixed-text-box">
+            <p>Frases motivacionales</p>
+        </div>
+        <a href="https://ian2007xd.github.io/SoulSpark" class="fixed-button" target="_blank">
+            <i class="fa-solid fa-trophy"></i>
+        </a>
+    </div>
     <!--MENU-->
     <nav class="nav">
         <div class="nav-bar">
